# Climate-Predicted-Project

./: .cdsapirc  .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  test_env.bat  test_env.py  visualize_era5.ipynb
docs/: CUDA_FIX.md  PARAMETER_GUIDE.md  QUICK_START.md  README.md  SERVER_TRAINING_GUIDE.md  TRAINING_CONFIG.md  UPDATE_NOTES.md
scripts/: check_data.py  check_vars.py  download_era5_data.py  process_era5_files.py  train_eval.py  visualize_result.py
src/: data.py  models.py
src/utils/: metrics.py
