[project]
name = "climate-d-s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bottleneck>=1.6.0",
    "dask>=2025.11.0",
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "xarray>=2025.11.0",
]
